--- a/12. Estructura de Grafo.ipynb
+++ b/12. Estructura de Grafo.ipynb
@@ -30,6 +30,7 @@
     "    def __init__(self, contenido):\n",
     "        self.contenido = contenido\n",
     "        self.carreteras = {}\n",
+    "        self.costeDijkstra = [float('inf'), None];\n",
     "        \n",
     "    def AgregarCarretera(self, destino, peso, estado):\n",
     "        actuales = []\n",
